event card mobile alignment fix

--- a/src/app/uikit/eventCard/eventCard.module.sass
+++ b/src/app/uikit/eventCard/eventCard.module.sass
@@ -66,7 +66,7 @@
         flex-direction: column
         gap: 30px
         top: 30%
-        left: 5%
+        left: 10%
         width: 80%
         height: auto
 
